# manta

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FEATURE_AUDIT.md  FUTURE.md  IMPROVE.md  README.md  SECURITY.md  TODO.md  build.sh  clippy.toml  config.example.secrets.toml  config.example.yaml  demo_file.txt  docker-compose.yml  hi.txt  package-lock.json  package.json  plan.md  rustfmt.toml  salamander_plan.md  test_team.sh
.github/workflows/: ci.yml  docker.yml  release.yml
assets/: web_terminal.html
crates/manta-channel-sdk/: Cargo.toml
crates/manta-channel-sdk/src/: lib.rs
deploy/: README.md
deploy/kubernetes/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  secret.yaml  service.yaml
deploy/systemd/: install.sh  manta.service  uninstall.sh
docs/: API.md  ARCHITECTURE.md  MANTA_OPENCLAW_DIFF.md  USER_GUIDE.md
examples/skills/_template/: README.md  SKILL.md
examples/skills/calculator/: SKILL.md
examples/skills/news/: SKILL.md
examples/skills/reminder/: SKILL.md
examples/skills/todo/: SKILL.md
examples/skills/weather/: SKILL.md
examples/wasm-plugins/echo-channel/: Cargo.toml  README.md  echo-channel.yaml
examples/wasm-plugins/echo-channel/src/: lib.rs
scripts/: release.sh
src/: cli.rs  client.rs  config.rs  daemon.rs  dirs.rs  error.rs  lib.rs  logs.rs  main.rs  secrets.rs  web.rs  web_terminal.rs
src/acp/: mod.rs
src/adapters/: api.rs  mod.rs  storage.rs
src/agent/: budget.rs  compressor.rs  context.rs  cost_guard.rs  mod.rs  personality.rs  planner.rs  prompt_builder.rs  session.rs  session_store.rs  subagent_registry.rs  todo.rs  turns.rs
src/assistants/: mesh.rs  mod.rs  process.rs
src/canvas/: mod.rs
src/channels/: discord.rs  feishu.rs  formatter.rs  health.rs  lark.rs  lifecycle.rs  metrics.rs  mod.rs  plugin_host.rs  qq.rs  slack.rs  state.rs  telegram.rs  whatsapp.rs
src/cli/: admin.rs  agent.rs  channel.rs  chat.rs  cron.rs  daemon.rs  entity.rs  mcp.rs  mod.rs  plugin.rs  security.rs  session.rs  skill.rs  team.rs
src/core/: engine.rs  mod.rs  models.rs
src/cron/: advanced.rs  mod.rs
src/gateway/: middleware.rs  mod.rs  send_policy.rs  webhooks.rs
src/memory/: db.rs  dual.rs  hybrid.rs  local_embeddings.rs  mod.rs  personality.rs  session_search.rs  sqlite.rs  vector.rs
src/model_router/: mod.rs
src/plugins/: hooks.rs  manifest.rs  mod.rs  runtime.rs
src/providers/: anthropic.rs  fallback.rs  mod.rs  openai.rs
src/security/: audit.rs  mod.rs  pairing.rs  pentest.rs
src/server/: mod.rs
src/skills/: builtin.rs  builtin_macros.rs  config.rs  frontmatter.rs  install.rs  mod.rs  registry.rs  storage.rs  watcher.rs
src/skills/builtin/agent-browser/: SKILL.md
src/skills/builtin/agent-creator/: SKILL.md
src/skills/builtin/api-gateway/: SKILL.md
src/skills/builtin/clawhub/: SKILL.md
src/skills/builtin/cron/: SKILL.md
src/skills/builtin/find-skills/: SKILL.md
src/skills/builtin/github/: SKILL.md
src/skills/builtin/nano-pdf/: SKILL.md
src/skills/builtin/self-improving-agent/: SKILL.md
src/skills/builtin/skill-creator/: SKILL.md
src/skills/builtin/summarize/: SKILL.md
src/skills/builtin/tmux/: SKILL.md
src/skills/builtin/weather/: SKILL.md
src/tailscale/: mod.rs
src/team/: mesh.rs  mod.rs
src/tools/: acp_tool.rs  browser.rs  code_exec.rs  command_gate.rs  cron_tool.rs  delegate_tool.rs  file.rs  grep.rs  hooks.rs  mcp.rs  memory.rs  mod.rs  sandbox.rs  shell.rs  team_communicate_tool.rs  time.rs  todo_tool.rs  web.rs
src/utils/: batch.rs  logging.rs  mod.rs  pool.rs  profiling.rs
src/webhook/: lark.rs  mod.rs  qq.rs  whatsapp.rs
tests/: integration_tests.rs
web/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/scripts/: bundle-inline.js  generate-logo-component.js
web/src/: App.tsx  styles.css  types.ts
web/src/components/: Header.tsx  InputArea.tsx  MantaLogo.tsx  Message.tsx  TypingIndicator.tsx
web/src/utils/: format.ts  websocket.ts
wit/: channel.wit
