[package]
name = "manta"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Manta Contributors"]
description = "Manta - A Rust application"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/manta"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
rustyline = { version = "14.0", default-features = false }
crossterm = "0.27"

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Configuration
config = "0.14"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"], default-features = false }
bytes = "1.5"

# HTTP server
axum = "0.7"

# JSON
serde_json = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
notify = { version = "6.1", default-features = false, features = ["macos_fsevent"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
dirs = "5.0"

# YAML support
serde_yaml = "0.9"

# Async trait support
async-trait = "0.1"

# Futures for streaming
futures-core = "0.3"
async-stream = "0.3"

# Random number generation for jitter
rand = "0.8"

# Glob patterns
glob = "0.3"

# URL encoding
urlencoding = "2.1"

# Regex for security scanning
regex = "1.10"

# System resource limits (Unix only)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "migrate", "chrono"] }

# Channels (optional)
teloxide = { version = "0.12", features = ["macros"], optional = true }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"], optional = true }
[features]
default = ["telegram"]
telegram = ["teloxide"]
discord = ["serenity"]
slack = []
all-channels = ["telegram", "discord", "slack"]

[dev-dependencies]
# Testing
tokio-test = "0.4"
wiremock = "0.6"
mockall = "0.12"

# Assertions
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
