[package]
name = "manta"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Manta Contributors"]
description = "Manta - A Rust application"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/manta"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
rustyline = { version = "14.0", default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Configuration
config = "0.14"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"], default-features = false }
bytes = "1.5"

# HTTP server
axum = { version = "0.7", features = ["ws"] }
axum-extra = "0.9"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }

# WebSocket client
tokio-tungstenite = "0.21"
futures-util = "0.3"

# JSON
serde_json = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
notify = { version = "6.1", default-features = false, features = ["macos_fsevent"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
dirs = "5.0"

# YAML support
serde_yaml = "0.9"

# Async trait support
async-trait = "0.1"

# Futures for streaming
futures = "0.3"
futures-core = "0.3"
async-stream = "0.3"

# Random number generation for jitter
rand = "0.8"

# Glob patterns
glob = "0.3"

# URL encoding
urlencoding = "2.1"

# Regex for security scanning
regex = "1.10"

# Browser automation (optional)
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], optional = true }
url = "2.5"

# Shell expansion for paths
shellexpand = "3.1"

# Webhook signature verification
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
subtle = "2.5"

# System resource limits and signals (Unix only)
[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.27", features = ["signal", "process"] }

# Daemon functionality
daemonize = "0.5"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "migrate", "chrono"] }

# Vector database (QMD/LanceDB-style)
pgvector = { version = "0.4", optional = true }

# Embeddings (using API-based providers for now)
# fastembed has dependency issues with ort crate
# llama-cpp-2 for full GGUF support
llama-cpp-2 = { version = "0.1", optional = true }
# HuggingFace Hub for model auto-download
hf-hub = { version = "0.5", optional = true, features = ["tokio"] }

# Plugin system (WASM runtime)
wasmtime = { version = "15.0", optional = true }
wasmtime-wasi = { version = "15.0", optional = true }

# Hot reload - file watching
notify-debouncer-full = { version = "0.3", optional = true }

# Channels (optional)
teloxide = { version = "0.12", features = ["macros"], optional = true }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"], optional = true }

[features]
default = ["telegram", "plugins", "hot-reload", "local-embeddings"]
telegram = ["teloxide"]
discord = ["serenity"]
slack = []
whatsapp = []
qq = []
lark = []
all-channels = ["telegram", "discord", "slack", "whatsapp", "qq", "lark"]
tailscale = []
browser = ["chromiumoxide"]
vector-db = []
local-embeddings = ["llama-cpp-2", "hf-hub"]
plugins = ["wasmtime", "wasmtime-wasi"]
hot-reload = ["notify-debouncer-full"]

# Note: Discord and Slack use reqwest for HTTP API calls
# WhatsApp, QQ, Lark use reqwest with custom implementations
# Browser automation requires Chrome/Chromium installed

[dev-dependencies]
# Testing
tokio-test = "0.4"
wiremock = "0.6"
mockall = "0.12"

# Assertions
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
