[package]
name = "manta-channel-sdk"
version = "0.1.0"
edition = "2021"
description = "SDK for building Manta channel plugins in Rust"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = { version = "0.54", default-features = false, features = ["macros"] }

[lib]
crate-type = ["rlib"]
