[package]
name = "echo-channel"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = { version = "0.17", default-features = false, features = ["realloc"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true
